fix word wrap

--- a/global/css/main.css
+++ b/global/css/main.css
@@ -262,6 +262,8 @@ span.jPag-snext-img{
 	min-height : 100px;
 	max-height : 500px;
 	overflow: auto;
+	word-wrap: break-word;
+
 }
 .chatpost {
 	margin-bottom: 7px;
